Added Caffeine Caching for Eggs